update pattern glyph to avoid overlapping circles

--- a/src/src/components/ControlView/styles.scss
+++ b/src/src/components/ControlView/styles.scss
@@ -17,7 +17,7 @@
 }
 
 .dataInspector {
-  width: 20%;
+  width: 18%;
   height: 263px;
   margin-right: 5px;
   border: 1px solid #808080;
@@ -44,7 +44,7 @@
 }
 
 .modelInspector {
-  width: 79%;
+  width: 81%;
 }
 
 .screeCharts {
