--- a/src/src/components/ListView/styles.scss
+++ b/src/src/components/ListView/styles.scss
@@ -1,6 +1,10 @@
 .ListView {
 	width: 17.75%;
-	height: 700px;
+	height: 720px;
 	margin-right: 5px;
+	border: 1px solid #808080;
+}
+
+#table{
 	border: 1px solid #808080;
 }
